--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,7 @@ html {
     padding-top: 1rem;
 }
 
+/* nav */
 nav {
     display: flex;
     justify-content: space-between;
@@ -40,4 +41,21 @@ nav img {
 nav span {
     margin-left: 1rem;
     margin-right: 1rem;
+}
+
+/* banner */
+.banner {
+    float: right;
+    margin-top: 10rem;
+    background-color: white;
+    padding: 1.5rem 5rem;
+    position: relative;
+    right: -2rem;
+}
+
+h1 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.2;
 }
